# nucleus-python-client

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build.py  conftest.py  constants.py  create_lockfile.sh  demo.ipynb  pyproject.toml  requirements.txt  setup.py  temp_test_e2e.py  update_circleci_lock.sh
.circleci/: config.yml
IngestDevelopmentScripts/: ObjectApproachDev(NoClassDef).py  TestScript.py
cli/: client.py  datasets.py  docs.py  install_completion.py  jobs.py  modelci.py  models.py  nu.py  reference.py  slices.py  tests.py  unit_tests.py
cli/helpers/: nucleus_url.py  web_helper.py
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/_static/css/: custom.css
docs/_templates/: nucleus-module.rst
docs/_templates/autosummary/: class.rst  function.rst  module.rst
docs/_templates/python/: class.rst  module.rst
docs/source/: api.rst  conf.py  index.rst  nucleus.annotation.rst  nucleus.autocurate.rst  nucleus.constants.rst  nucleus.dataset.rst  nucleus.dataset_item.rst  nucleus.errors.rst  nucleus.job.rst  nucleus.model.rst  nucleus.model_run.rst  nucleus.payload_constructor.rst  nucleus.prediction.rst
docs/source/_templates/: class.rst  module.rst
docs/source/_templates/autosummary/: class.rst
ingest_development_scripts/: testing_script.py
nucleus/: __init__.py  _metadata.py  _native_dedup.c  _native_dedup.pyi  annotation.py  annotation_uploader.py  async_job.py  async_utils.py  autocurate.py  autotag.py  camera_params.py  chip_utils.py  connection.py  constants.py  dataset.py  dataset_item.py  dataset_item_uploader.py  dataset_populator.py  deduplication.py  deprecation_warning.py  embedding_index.py  errors.py  evaluation_match.py  evaluation_v2.py  evaluation_v2_exclusions.py  evaluation_v2_preset.py  iou_match.py  job.py  local_deduplication.py  logger.py  metadata_handler.py  metadata_manager.py  model.py  model_bundle.py  model_run.py  package_not_installed.py  payload_constructor.py  prediction.py  pydantic_base.py  quaternion.py  (+15 more)
nucleus/data_transfer_object/: dataset_details.py  dataset_info.py  dataset_size.py  dict_compatible_model.py  evaluation_v2.py  job_status.py  scenes_list.py
nucleus/deploy/: __init__.py  cli.py  client.py  constants.py  find_packages.py  internal_connection.py  model_bundle.py  model_endpoint.py  nucleus_integration.py  request_validation.py
nucleus/deploy/cli/: bin.py  bundles.py  client.py  endpoints.py
nucleus/experimental/: DEPRECATED_model_bundle.py  README.md  __init__.py  hosted_inference_client.py  model_bundle.py  model_endpoint.py  nucleus_integration.py  utils.py
nucleus/metrics/: __init__.py  base.py  categorization_metrics.py  cuboid_metrics.py  cuboid_utils.py  custom_types.py  errors.py  filtering.py  filters.py  geometry.py  label_grouper.py  metric_utils.py  polygon_metrics.py  polygon_utils.py  segmentation_loader.py  segmentation_metrics.py  segmentation_to_poly_metrics.py  segmentation_utils.py
nucleus/modelci/: README.md  __init__.py  client.py  constants.py  errors.py  eval_function.py  eval_function_collection.py  scenario_test.py  scenario_test_evaluation.py  unit_test.py  unit_test_evaluation.py  unit_test_metric.py  utils.py
nucleus/modelci/data_transfer_objects/: add_unit_test_metric.py  create_unit_test.py  eval_function.py  eval_function_condition.py  get_eval_functions.py  unit_test.py  unit_test_evaluations.py  unit_test_metric.py
nucleus/modelci/eval_functions/: available_eval_functions.py  base_eval_function.py
nucleus/scripts/: nucleus_3d_demo.ipynb
nucleus/validate/: __init__.py  client.py  constants.py  errors.py  scenario_test.py  scenario_test_evaluation.py  scenario_test_metric.py  utils.py
nucleus/validate/data_transfer_objects/: eval_function.py  scenario_test.py  scenario_test_evaluations.py  scenario_test_metric.py
nucleus/validate/eval_functions/: available_eval_functions.py  base_eval_function.py
nucleus/validate/eval_functions/config_classes/: segmentation.py
references/: README.md  get_slice.py  run_batching.py  utils.py
scripts/: autocurate_bdd.ipynb  cleanup_slices.py  load_test.py  print_version_changelog.py  setup_test_autocurates.ipynb  validate_release_artifacts.py
test_results/: junit.xml
tests/: helpers.py  test_annotation.py  test_autocurate.py  test_autotag.py  test_dataset.py  test_deduplication.py  test_evaluation_v2.py  test_evaluation_v2_presets.py  test_indexing.py  test_jobs.py  test_local_deduplication.py  test_metadata.py  test_models.py  test_prediction.py  test_public_datasets.py  test_scene.py  test_segmentation.py  test_slice.py  test_taxonomy.py  test_test_launch_integration.py  test_track.py  test_unit_test.py  test_upload_response.py  test_utils.py  test_video_scene.py
tests/cli/: __init__.py  conftest.py  test_datasets.py  test_jobs.py  test_models.py  test_nu.py  test_reference.py  test_slices.py  test_tests.py
tests/experimental/: conftest.py  test_model_bundle.py
tests/metrics/: __init__.py  helpers.py  test_categorization_metrics.py  test_cuboid_metrics.py  test_filtering.py  test_geometry.py  test_polygon_metrics.py  test_razterization.py  test_segmentation.py
tests/modelci/: conftest.py  helpers.py  test_eval_function.py  test_scenario_test.py  test_scenario_test_evaluation.py  test_unit_test.py  test_unit_test_evaluation.py
tests/modelci/data_transfer_objects/: eval_functions.py
tests/testdata/: pytest_embeddings_payload.json
tests/validate/: conftest.py  test_eval_function.py  test_scenario_test.py  test_scenario_test_evaluation.py
