[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "scale-nucleus"
version = "0.1.5"
description = "The official Python client library for Nucleus, the Data Platform for AI"
license =  "MIT"
authors = ["Scale AI Nucleus Team <nucleusapi@scaleapi.com>"]
readme = "README.md"
homepage = "https://scale.com/nucleus"
repository = "https://github.com/scaleapi/nucleus-python-client"
documentation = "https://dashboard.scale.com/nucleus/docs/api"
packages = [{include="nucleus"}]

[tool.poetry.dependencies]
python = "^3.6.2"
grequests = "^0.6.0"
requests = "^2.25.1"
tqdm = "^4.60.0"
dataclasses = { version = "^0.7", python = "^3.6.1, <3.7" }

[tool.poetry.dev-dependencies]
poetry = "^1.1.5"
pytest = "^6.2.3"
pylint = "^2.7.4"
black = "^20.8b1"
flake8 = "^3.9.1"
mypy = "^0.812"
coverage = "^5.5"
pre-commit = "^2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
