[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "scale-nucleus"
version = "0.12.4"
description = "The official Python client library for Nucleus, the Data Platform for AI"
license =  "MIT"
authors = ["Scale AI Nucleus Team <nucleusapi@scaleapi.com>"]
readme = "README.md"
homepage = "https://scale.com/nucleus"
repository = "https://github.com/scaleapi/nucleus-python-client"
documentation = "https://dashboard.scale.com/nucleus/docs/api"
packages = [{include="nucleus"}, {include="cli"}]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
requests = "^2.23.0"
tqdm = "^4.41.0"
dataclasses = { version = "^0.7", python = "^3.6.1, <3.7" }
aiohttp = "^3.7.4"
nest-asyncio = "^1.5.1"
pydantic = "^1.8.2"
numpy = "^1.19.5"
scipy = ">=1.4.1"  # NOTE: COLAB has 1.4.1 and has problems updating
click = ">=7.1.2,<9.0"  # NOTE: COLAB has 7.1.2 and has problems updating
rich = ">=10.15.2"
shellingham = "^1.4.0"
scikit-learn = ">=0.24.0"
Shapely = { version = ">=1.8.0", optional = true }
rasterio = "^1.2.10"
Pillow = ">=8.3.1"
s3fs = ">=2022.1.0"
scale-launch = { version = ">=0.1.0", python = ">=3.7,<4.0" }

[tool.poetry.dev-dependencies]
pytest = [
  { version = ">=6.2.3", python = ">=3.6.2,<3.7" },
  { version = ">=7.1.1", python = ">=3.7,<4.0" }
]
pylint = "^2.7.4"
black = "^20.8b1"
flake8 = "^3.9.1"
mypy = "^0.812"
coverage = "^5.5"
pre-commit = "^2.12.1"
jupyterlab = "^3.1.10"
isort = "^5.10.1"
absl-py = "^0.13.0"
Sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
furo = ">=2021.10.9"
sphinx-autoapi = "^1.8.4"
pytest-xdist = "^2.5.0"

[tool.poetry.scripts]
nu = "cli.nu:nu"

[tool.poetry.extras]
shapely = ["Shapely"]


[tool.pytest.ini_options]
markers = [
    "integration: marks tests as slow (deselect with '-m \"not integration\"')",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
