[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.ruff]
line-length = 79
ignore = ["E501", "E741", "E731", "F401"]  # Easy ignore for getting it running - can be reevaluated later

[tool.poetry]
name = "scale-nucleus"
version = "0.16.18"
description = "The official Python client library for Nucleus, the Data Platform for AI"
license =  "MIT"
authors = ["Scale AI Nucleus Team <nucleusapi@scaleapi.com>"]
readme = "README.md"
homepage = "https://scale.com/nucleus"
repository = "https://github.com/scaleapi/nucleus-python-client"
documentation = "https://dashboard.scale.com/nucleus/docs/api"
packages = [{include="nucleus"}, {include="cli"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.23.0"
tqdm = "^4.41.0"
aiohttp = "^3.7.4"
nest-asyncio = "^1.5.1"
pydantic = ">=1.8.2"
numpy = [{ version = ">=1.19.5", python = ">=3.7,<3.10" }, { version = ">=1.22.0", python = ">=3.10"}]
scipy = { version=">=1.4.1", optional = true }  # NOTE: COLAB has 1.4.1 and has problems updating
click = ">=7.1.2,<9.0"  # NOTE: COLAB has 7.1.2 and has problems updating
rich = ">=10.15.2"
shellingham = "^1.4.0"
scikit-learn = { version =">=0.24.0", optional = true }
Shapely = { version = ">=1.8.0", optional = true }
rasterio = { version = ">=1.2.0", optional = true }
Pillow = ">=7.1.2"
scale-launch = { version = ">=0.1.0", python = ">=3.7,<4.0",  optional = true}
questionary = "^1.10.0"
python-dateutil = "^2.8.2"
boto3 = "^1.28.56"

[tool.poetry.dev-dependencies]
pytest = [
  { version = ">=7.1.1", python = ">=3.7,<4.0" }
]
pylint = ">=2.7.4"
black = "^23.3.0"
mypy = ">=0.812"
coverage = "^5.5"
pre-commit = ">=2.12.1"
jupyterlab = ">=3.1.10,<4.0"
isort = ">=5.10.1"
absl-py = ">=0.13.0"
Sphinx = ">=4.2.0,<5"
sphinx-autobuild = "^2021.3.14"
furo = ">=2021.10.9"
sphinx-autoapi = "^1.8.4"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
nu = "cli.nu:nu"

[tool.poetry.extras]
metrics = ["Shapely", "rasterio", "scipy", "scikit-learn"]
launch = ["scale-launch"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.290"
types-setuptools = "^68.2.0.0"
types-requests = "^2.31.0.2"
types-python-dateutil = "^2.8.19.14"
pytest-xdist = "^3.5.0"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as slow (deselect with '-m \"not integration\"')",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
